feat: update pom

--- a/ms-hinsurance/src/main/resources/application.properties
+++ b/ms-hinsurance/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #server.port=9000
 server.servlet.context-path=/rimac
 spring.jpa.hibernate.ddl-auto=update
+
+token.api=123
